# Hospital-Distribution

./: .gitignore  CMakeLists.txt  README.md  hospital_distribution.pro  index.html  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapcontroller.cpp  mapcontroller.h  res.qrc  voronoi_demo.cpp
model/: evaluation_result.h  hospital.h  voronoi_cell.h
utils/: file_importer.cpp  file_importer.h
view/: voronoi_scene.cpp  voronoi_scene.h  voronoi_view.cpp  voronoi_view.h
voronoi/: voronoi_calculator.cpp  voronoi_calculator.h
widget/: hospital_input_widget.cpp  hospital_input_widget.h  result_panel.cpp  result_panel.h
